Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -300,7 +300,7 @@
   "dn34:1.7.24": "These are the six things that are to be abandoned.",
   "dn34:1.7.25": "What are the six things that lead to backsliding?",
   "dn34:1.7.26": "The six disrespect—",
-  "dn34:1.7.27": "Here, a monk dwells disrespectful and defiant toward the teacher ... toward the Dhamma ... toward the Saṅgha ... toward the training ... toward the quality of attentiveness ... they dwell disrespectful and defiant toward the quality of hospitality.",
+  "dn34:1.7.27": "Here, a monk dwells disrespectful and defiant toward the teacher ... toward the Dhamma ... toward the Saṅgha ... toward the training ... toward the quality of attentiveness ... he dwells disrespectful and defiant toward the quality of hospitality.",
   "dn34:1.7.28": "These are the six things that lead to backsliding.",
   "dn34:1.7.29": "What are the six things that lead to accomplishment?",
   "dn34:1.7.30": "The six respects—",
