Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -304,7 +304,7 @@
   "dn34:1.7.28": "These are the six things that lead to backsliding.",
   "dn34:1.7.29": "What are the six things that lead to accomplishment?",
   "dn34:1.7.30": "The six respects—",
-  "dn34:1.7.31": "Here, a monk dwells respectfully and deferentially toward the teacher ... toward the Dhamma ... toward the Saṅgha ... toward the training ... toward the quality of attentiveness ... they dwell respectfully and deferentially toward the quality of hospitality.",
+  "dn34:1.7.31": "Here, a monk dwells respectfully and deferentially toward the teacher ... toward the Dhamma ... toward the Saṅgha ... toward the training ... toward the quality of attentiveness ... he dwells respectfully and deferentially toward the quality of hospitality.",
   "dn34:1.7.32": "These are the six things that lead to accomplishment.",
   "dn34:1.7.33": "What are the six things that are hard to penetrate?",
   "dn34:1.7.34": "The six elements leading to a way out—",
