--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -175,7 +175,7 @@
   "dn34:1.6.5": "‘He is thus the Blessed One, the Worthy One, the Fully Enlightened One. He is accomplished in knowledge and conduct; the Well Gone One; knower of worlds. He is the unsurpassed coachman of trainable people; the Teacher of angels and humans. He is the Buddha, the Blessed One.’",
   "dn34:1.6.6": "They are healthy, have few ailments, and have good digestion which is neither too cold nor too hot but is moderate and fit for exertion.",
   "dn34:1.6.7": "They are honest, guileless, and open themselves up as they are to the teacher or their knowledgeable fellows in the holy life.",
-  "dn34:1.6.8": "They dwell with resolute energy for the purpose of abandoning unwholesome mental states and for arousing wholesome mental states. They are steadfast, firm in their exertion, and not remiss in their responsibilities regarding wholesome mental states.",
+  "dn34:1.6.8": "He dwells with resolute energy for the purpose of abandoning unwholesome mental states and for arousing wholesome mental states. He is steadfast, firm in his exertion, and is not remiss in his responsibilities regarding wholesome mental states.",
   "dn34:1.6.9": "They are discerning and endowed with the discernment that goes to arising and passing, that is noble, penetrative, and goes rightly to the destruction of suffering.",
   "dn34:1.6.10": "These are the five things that are of great help.",
   "dn34:1.6.11": "What are the five things that are to be cultivated?",
