--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -458,5 +458,6 @@
   "dn34:2.1.10": "That Venerable clarifies what was unclear, elucidates what was obscure, and through various means dispels his doubt regarding dubious things.",
   "dn34:2.1.11": "This is the second cause, the second support that leads to acquiring the unacquired discernment that is foundational to one living the holy life, and to furthering, increasing, cultivating, and fulfilling that which has been acquired.",
   "dn34:2.1.12": "Further, having heard the teaching, he strives by twofold seclusion—physical seclusion and mental seclusion.",
-  "dn34:2.1.13": "This is the third cause, the third support that leads to acquiring the unacquired discernment that is foundational to one living the holy life, and to furthering, increasing, cultivating, and fulfilling that which has been acquired."
+  "dn34:2.1.13": "This is the third cause, the third support that leads to acquiring the unacquired discernment that is foundational to one living the holy life, and to furthering, increasing, cultivating, and fulfilling that which has been acquired.",
+  "dn34:2.1.14": "And further, the monk is virtuous. He dwells restrained by the restraint of the monk's rules and is skilled in his behavior and chooses his environment wisely. He sees danger in the slightest faults and, having taken them on, he trains himself according to the training precepts."
 }
