--- a/translation/my/my-team/sutta/dn/dn1_translation-my-my-team.json
+++ b/translation/my/my-team/sutta/dn/dn1_translation-my-my-team.json
@@ -5,7 +5,7 @@
   "dn1:1.1.1": "အကျွန်ုပ်သည် ဤသို့ ကြားနာခဲ့ရပါသည် —",
   "dn1:1.1.2": "အခါတစ်ပါး၌ မြတ်စွာဘုရားသည် များစွာသော ငါးရာခန့်မျှသော ရဟန်းသံဃာနှင့်အတူ ရာဇဂြိုဟ်ပြည် နှင့် နာဠန္ဒာမြို့ အကြား၌ ခရီးရှည်ကြွတော်မူ၏၊",
   "dn1:1.1.3": "သုပ္ပိယပရိဗိုဇ်သည်လည်း တပည့်ဖြစ်သော ဗြဟ္မဒတ်လုလင်နှင့်အတူ ရာဇဂြိုဟ်ပြည် နှင့် နာဠန္ဒာမြို့အကြား၌ပင် ခရီးရှည်သွား၏၊",
-  "dn1:1.1.4": "ထိုအခိုက် သုပ္ပိယပရိဗိုဇ်သည် ဘုရား တရား သံဃာ၏ အပြစ်ကို များစွာသော အကြောင်းဖြင့် ပြော၏၊",
+  "dn1:1.1.4": "ထိုအခိုက် သုပ္ပိယပရိဗိုဇ်သည် ဘုရား တရား သံဃာ၏ အပြစ်ကို အကြောင်းမျိုးစုံဖြင့် ပြော၏၊",
   "dn1:1.1.5": "သို့သော် သူ၏ တပည့်ဖြစ်သော ဗြဟ္မဒတ်လုလင်သည်ကား ဘုရား တရား သံဃာ၏ဂုဏ်ကို များစွာသောအကြောင်းဖြင့် ပြော၏၊",
   "dn1:1.1.6": "ဤသို့လျှင် ဤဆရာတပည့် နှစ်ဦးတို့သည် အချင်းချင်း ဖြောင့်ဖြောင့်ကြီးဆန့်ကျင်သော စကားကို ပြောလျက် မြတ်စွာဘုရားနှင့် ရဟန်းသံဃာ၏ နောက်မှနောက်မှ အစဉ်လိုက်ကုန်၏၊",
   "dn1:1.2.1": " ထိုအခါ မြတ်စွာဘုရားသည် ရဟန်းသံဃာနှင့်အတူ အမ္ဗလဋ္ဌိကာဥယျာဉ် မင်းကွန်း၌ တစ်ညဉ့်တည်းခိုရန် ချဉ်းကပ်တော်မူ၏၊[မင်းကွန်း = မင်းတို့၏ နားနေရန် ပြုလုပ်ထားသော အဆောက်အအုံ။]",
