--- a/translation/my/my-team/sutta/dn/dn1_translation-my-my-team.json
+++ b/translation/my/my-team/sutta/dn/dn1_translation-my-my-team.json
@@ -7,7 +7,7 @@
   "dn1:1.1.3": "သုပ္ပိယပရိဗိုဇ်သည်လည်း တပည့်ဖြစ်သော ဗြဟ္မဒတ်လုလင်နှင့်အတူ ရာဇဂြိုဟ်ပြည် နှင့် နာဠန္ဒာမြို့အကြား၌ပင် ခရီးရှည်သွား၏၊",
   "dn1:1.1.4": "ထိုအခိုက် သုပ္ပိယပရိဗိုဇ်သည် ဘုရား တရား သံဃာ၏ အပြစ်ကို အကြောင်းမျိုးစုံဖြင့် ပြော၏၊",
   "dn1:1.1.5": "သို့သော် သူ၏ တပည့်ဖြစ်သော ဗြဟ္မဒတ်လုလင်သည်ကား ဘုရား တရား သံဃာ၏ဂုဏ်ကို အကြောင်းမျိုးစုံဖြင့် ပြော၏၊",
-  "dn1:1.1.6": "ဤသို့လျှင် ဤဆရာတပည့် နှစ်ဦးတို့သည် အချင်းချင်း ဖြောင့်ဖြောင့်ကြီးဆန့်ကျင်သော စကားကို ပြောလျက် မြတ်စွာဘုရားနှင့် ရဟန်းသံဃာ၏ နောက်မှနောက်မှ အစဉ်လိုက်ကုန်၏၊",
+  "dn1:1.1.6": "ဤသို့လျှင် ဤဆရာတပည့် နှစ်ဦးတို့သည် အချင်းချင်း ဖြောင့်ဖြောင့်ကြီးဆန့်ကျင်သော စကားကို ပြောလျက် မြတ်စွာဘုရားနှင့် ရဟန်းသံဃာတို့၏ နောက်မှလိုက်ကြကုန်၏။",
   "dn1:1.2.1": " ထိုအခါ မြတ်စွာဘုရားသည် ရဟန်းသံဃာနှင့်အတူ အမ္ဗလဋ္ဌိကာဥယျာဉ် မင်းကွန်း၌ တစ်ညဉ့်တည်းခိုရန် ချဉ်းကပ်တော်မူ၏၊[မင်းကွန်း = မင်းတို့၏ နားနေရန် ပြုလုပ်ထားသော အဆောက်အအုံ။]",
   "dn1:1.2.2": "သုပ္ပိယပရိဗိုဇ်သည်လည်း တပည့်ဖြစ်သော ဗြဟ္မဒတ်လုလင်နှင့် အတူအမ္ဗလဋ္ဌိကာဥယျာဉ် မင်းကွန်း၌ပင် တစ်ညဉ့်တည်းခိုရန် ချဉ်းကပ်၏၊",
   "dn1:1.2.3": "ထိုနေရာ၌လည်း သုပ္ပိယပရိဗိုဇ်သည် ဘုရား တရား သံဃာ၏အပြစ်ကို များစွာသောအကြောင်းဖြင့် ပြော၏၊ ",
