--- a/translation/my/my-team/sutta/dn/dn1_translation-my-my-team.json
+++ b/translation/my/my-team/sutta/dn/dn1_translation-my-my-team.json
@@ -3,7 +3,7 @@
   "dn1:0.2": "ဗြဟ္မဇာလသုတ်",
   "dn1:0.3": "၁။ ပရိဗ္ဗာဇကကထာ",
   "dn1:1.1.1": "အကျွန်ုပ်သည် ဤသို့ ကြားနာခဲ့ရပါသည် —",
-  "dn1:1.1.2": "အခါတစ်ပါး၌ မြတ်စွာဘုရားသည် များစွာသော ငါးရာခန့်မျှသော ရဟန်းသံဃာနှင့်အတူ ရာဇဂြိုဟ်ပြည် နှင့် နာဠန္ဒာမြို့ အကြား၌ ခရီးရှည်ကြွတော်မူ၏၊",
+  "dn1:1.1.2": "အခါတစ်ပါး၌ မြတ်စွာဘုရားသည် များစွာသော ငါးရာခန့်မျှသော ရဟန်းသံဃာနှင့်အတူ ရာဇဂြိုဟ်ပြည် နှင့် နာဠန္ဒာမြို့ အကြား၌ ခရီးရှည်ကြွတော်မူ၏။",
   "dn1:1.1.3": "သုပ္ပိယပရိဗိုဇ်သည်လည်း တပည့်ဖြစ်သော ဗြဟ္မဒတ်လုလင်နှင့်အတူ ရာဇဂြိုဟ်ပြည် နှင့် နာဠန္ဒာမြို့အကြား၌ပင် ခရီးရှည်သွား၏။",
   "dn1:1.1.4": "ထိုအခိုက် သုပ္ပိယပရိဗိုဇ်သည် ဘုရား တရား သံဃာ၏ အပြစ်ကို အကြောင်းမျိုးစုံဖြင့် ပြော၏၊",
   "dn1:1.1.5": "သို့သော် သူ၏ တပည့်ဖြစ်သော ဗြဟ္မဒတ်လုလင်သည်ကား ဘုရား တရား သံဃာ၏ဂုဏ်ကို အကြောင်းမျိုးစုံဖြင့် ပြော၏။",
