--- a/translation/my/my-team/sutta/dn/dn1_translation-my-my-team.json
+++ b/translation/my/my-team/sutta/dn/dn1_translation-my-my-team.json
@@ -10,7 +10,7 @@
   "dn1:1.1.6": "ဤသို့လျှင် ဤဆရာတပည့် နှစ်ဦးတို့သည် အချင်းချင်း ဖြောင့်ဖြောင့်ကြီးဆန့်ကျင်သော စကားကို ပြောလျက် မြတ်စွာဘုရားနှင့် ရဟန်းသံဃာတို့၏ နောက်မှလိုက်ကြကုန်၏။",
   "dn1:1.2.1": " ထိုအခါ မြတ်စွာဘုရားသည် ရဟန်းသံဃာနှင့်အတူ အမ္ဗလဋ္ဌိကာဥယျာဉ် မင်းတို့နားနေဆောင်၌ တစ်ညဉ့်တည်းခိုရန် ချဉ်းကပ်တော်မူ၏။",
   "dn1:1.2.2": "သုပ္ပိယပရိဗိုဇ်သည်လည်း တပည့်ဖြစ်သူ ဗြဟ္မဒတ်လုလင်နှင့်အတူ ထိုနားနေဆောင်၌ပင် တစ်ညဉ့်တည်းခိုရန် ချဉ်းကပ်၏။",
-  "dn1:1.2.3": "ထိုနေရာ၌လည်း သုပ္ပိယပရိဗိုဇ်သည် ဘုရား တရား သံဃာ၏အပြစ်ကို များစွာသောအကြောင်းဖြင့် ပြော၏၊ ",
+  "dn1:1.2.3": "ထိုနေရာမှာလည်း သုပ္ပိယပရိဗိုဇ်သည် ဘုရား တရား သံဃာ၏အပြစ်ကို အကြောင်းမျိုးစုံဖြင့် ပြော၏၊ ",
   "dn1:1.2.4": "သို့သော် သူ၏ တပည့်ဖြစ်သော ဗြဟ္မဒတ်လုလင်သည်ကား ဘုရား တရား သံဃာ၏ဂုဏ်ကို များစွာသောအကြောင်းဖြင့် ပြော၏၊",
   "dn1:1.2.5": "ဤသို့လျှင် ထိုဆရာတပည့် နှစ်ဦးတို့သည် အချင်းချင်း ဖြောင့်ဖြောင့်ကြီးဆန့်ကျင်သောစကားကို ပြောလျက် နေကုန်၏။",
   "dn1:1.3.1": "ထိုအခါ မိုးသောက်ချိန်၌ (အိပ်ရာမှ) ထကြ၍ တန်ဆောင်းဝန်း၌ များစွာသော ရဟန်းတို့ စုဝေးထိုင်နေကြရာတွင် ဤစကားဖြစ်ပေါ်၏ —",
