Translations by NyeinChanAye to translation/my/my-team/sutta/dn/dn1_translation-my-my-team.json

--- a/translation/my/my-team/sutta/dn/dn1_translation-my-my-team.json
+++ b/translation/my/my-team/sutta/dn/dn1_translation-my-my-team.json
@@ -11,7 +11,7 @@
   "dn1:1.2.1": " ထိုအခါ မြတ်စွာဘုရားသည် ရဟန်းသံဃာနှင့်အတူ အမ္ဗလဋ္ဌိကာဥယျာဉ် မင်းတို့နားနေဆောင်၌ တစ်ညဉ့်တည်းခိုရန် ချဉ်းကပ်တော်မူ၏။",
   "dn1:1.2.2": "သုပ္ပိယပရိဗိုဇ်သည်လည်း တပည့်ဖြစ်သူ ဗြဟ္မဒတ်လုလင်နှင့်အတူ ထိုနားနေဆောင်၌ပင် တစ်ညဉ့်တည်းခိုရန် ချဉ်းကပ်၏။",
   "dn1:1.2.3": "ထိုနေရာမှာလည်း သုပ္ပိယပရိဗိုဇ်သည် ဘုရား တရား သံဃာ၏အပြစ်ကို အကြောင်းမျိုးစုံဖြင့် ပြော၏၊ ",
-  "dn1:1.2.4": "သို့သော် သူ၏ တပည့်ဖြစ်သော ဗြဟ္မဒတ်လုလင်သည်ကား ဘုရား တရား သံဃာ၏ဂုဏ်ကို များစွာသောအကြောင်းဖြင့် ပြော၏၊",
+  "dn1:1.2.4": "သို့သော် သူ၏တပည့်ဖြစ်သူ ဗြဟ္မဒတ်လုလင်သည်ကား ဘုရား တရား သံဃာ၏ကောင်းဂုဏ်ကို အကြောင်းမျိုးစုံဖြင့် ပြော၏၊",
   "dn1:1.2.5": "ဤသို့လျှင် ထိုဆရာတပည့် နှစ်ဦးတို့သည် အချင်းချင်း ဖြောင့်ဖြောင့်ကြီးဆန့်ကျင်သောစကားကို ပြောလျက် နေကုန်၏။",
   "dn1:1.3.1": "ထိုအခါ မိုးသောက်ချိန်၌ (အိပ်ရာမှ) ထကြ၍ တန်ဆောင်းဝန်း၌ များစွာသော ရဟန်းတို့ စုဝေးထိုင်နေကြရာတွင် ဤစကားဖြစ်ပေါ်၏ —",
   "dn1:1.3.2": "“အံ့ဖွယ်ရှိပါပေစွ ငါ့သျှင်တို့၊ မဖြစ်ဖူးမြဲ ဖြစ်ပါပေစွ ငါ့သျှင်တို့၊ သိတော်မူသော မြင်တော်မူသော ပူဇော်အထူးကို ခံတော်မူထိုက်သော (အလုံးစုံသောတရားတို့ကို) ကိုယ်တိုင်မှန်စွာ သိတော်မူသော မြတ်စွာဘုရားသည် သတ္တဝါတို့၏ အထူးထူးသော အလိုဆန္ဒကို (အတိုင်းမသိ) ကောင်းစွာ ထိုးထွင်းသိတော်မူပါပေ၏၊ ",
