--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -1,5 +1,6 @@
 {
   "mn15:0.1": "Discorsi Medi 15",
   "mn15:0.2": "Misurare",
-  "mn15:1.1": "Così ho sentito."
+  "mn15:1.1": "Così ho sentito.",
+  "mn15:1.2": "Una volta il Venerabile Mahāmoggallāna si trovava nella terra dei Bhagga sulla Collina del Coccodrillo, nel parco dei cervi nel bosco di Bhesakaḷā."
 }
