--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -4,5 +4,6 @@
   "mn15:1.1": "Così ho sentito.",
   "mn15:1.2": "Una volta il Venerabile Mahāmoggallāna si trovava nella terra dei Bhagga sulla Collina del Coccodrillo, nel parco dei cervi del bosco di Bhesakaḷā.",
   "mn15:1.3": "Lì il Venerabile Mahāmoggallāna si rivolse ai mendicanti:",
-  "mn15:1.4": "“Reverendi, mendicanti!”"
+  "mn15:1.4": "“Reverendi, mendicanti!”",
+  "mn15:1.5": "“Reverendo,” risposero i mendicanti."
 }
