--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -6,5 +6,6 @@
   "mn15:1.3": "Lì il Venerabile Mahāmoggallāna si rivolse ai mendicanti:",
   "mn15:1.4": "“Reverendi, mendicanti!”",
   "mn15:1.5": "“Reverendo,” risposero i mendicanti.",
-  "mn15:1.6": "il Venerabile Mahāmoggallāna disse:"
+  "mn15:1.6": "il Venerabile Mahāmoggallāna disse:",
+  "mn15:2.1": "“Immaginate che un mendicante inviti"
 }
