--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -8,5 +8,6 @@
   "mn15:1.5": "“Reverendo,” risposero i mendicanti.",
   "mn15:1.6": "il Venerabile Mahāmoggallāna disse:",
   "mn15:2.1": "“Immaginate che un mendicante inviti",
-  "mn15:2.2": "altri mendicanti ad ammonirlo. Ma che lui sia difficile da ammonire, avendo qualità che lo rendono difficile da ammonire. È impaziente, e non riceve istruzioni in maniera rispettosa. I suoi compagni spirituali non penserebbero valga la pena di consigliargli ed istruirlo, e quella persona non otterrebbe la loro fiducia."
+  "mn15:2.2": "altri mendicanti ad ammonirlo. Ma che lui sia difficile da ammonire, avendo qualità che lo rendono difficile da ammonire. È impaziente, e non riceve istruzioni in maniera rispettosa. I suoi compagni spirituali non penserebbero valga la pena di consigliargli ed istruirlo, e quella persona non otterrebbe la loro fiducia.",
+  "mn15:3.1": "E quali sono le qualità che lo rendono difficile da ammonire?"
 }
