--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -11,5 +11,6 @@
   "mn15:2.2": "altri mendicanti ad ammonirlo. Ma che lui sia difficile da ammonire, avendo qualità che lo rendono difficile da ammonire. È impaziente, e non riceve istruzioni in maniera rispettosa. I suoi compagni spirituali non penserebbero valga la pena di consigliargli ed istruirlo, e quella persona non otterrebbe la loro fiducia.",
   "mn15:3.1": "E quali sono le qualità che lo rendono difficile da ammonire?",
   "mn15:3.2": "Primo, un mendicante ha desideri malvagi, essendo caduto sotto il dominio di desideri malvagi.",
-  "mn15:3.4": "Questa è una qualità che lo rende difficile da ammonire."
+  "mn15:3.4": "Questa è una qualità che lo rende difficile da ammonire.",
+  "mn15:3.5": "Inoltre, un mendicante glorifica sé stesso e denigra gli altri. …"
 }
