Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -13,5 +13,6 @@
   "mn15:3.2": "Primo, un mendicante ha desideri malvagi, essendo caduto sotto il dominio di desideri malvagi.",
   "mn15:3.4": "Questa è una qualità che lo rende difficile da ammonire.",
   "mn15:3.5": "Inoltre, un mendicante glorifica sé stesso e denigra gli altri. …",
-  "mn15:3.8": "È irritabile, sopraffatto dalla rabbia …"
+  "mn15:3.8": "È irritabile, sopraffatto dalla rabbia …",
+  "mn15:3.11": "È irritabile, e ostile a causa della rabbia …"
 }
