--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -16,5 +16,6 @@
   "mn15:3.8": "È irritabile, sopraffatto dalla rabbia …",
   "mn15:3.11": "È irritabile, e ostile a causa della rabbia …",
   "mn15:3.14": "È irritabile, e testardo a causa della rabbia …",
-  "mn15:3.17": "È irritabile, e usa parole che confinano con la rabbia …"
+  "mn15:3.17": "È irritabile, e usa parole che confinano con la rabbia …",
+  "mn15:3.20": "Quando viene accusato, obbietta l'accusatore …"
 }
