--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -18,5 +18,6 @@
   "mn15:3.14": "È irritabile, e testardo a causa della rabbia …",
   "mn15:3.17": "È irritabile, e usa parole che confinano con la rabbia …",
   "mn15:3.20": "Quando viene accusato, obbietta l'accusatore …",
-  "mn15:3.23": "Quando viene accusato, rimprovera l'accusatore …"
+  "mn15:3.23": "Quando viene accusato, rimprovera l'accusatore …",
+  "mn15:3.26": "Quando viene accusato, ribatte all'accusatore …"
 }
