Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -20,5 +20,6 @@
   "mn15:3.20": "Quando viene accusato, obbietta l'accusatore …",
   "mn15:3.23": "Quando viene accusato, rimprovera l'accusatore …",
   "mn15:3.26": "Quando viene accusato, ribatte all'accusatore …",
-  "mn15:3.29": "Quando viene accusato, evita il problema, distrae la discussione con punti irrilevanti, e dimostra fastidio, odio, ed acidità …"
+  "mn15:3.29": "Quando viene accusato, evita il problema, distrae la discussione con punti irrilevanti, e dimostra fastidio, odio, ed acidità …",
+  "mn15:3.32": "Quando viene accusato, non è in grado di riconoscere il proprio comportamento …"
 }
