Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -23,5 +23,6 @@
   "mn15:3.29": "Quando viene accusato, evita il problema, distrae la discussione con punti irrilevanti, e dimostra fastidio, odio, ed acidità …",
   "mn15:3.32": "Quando viene accusato, non è in grado di riconoscere il proprio comportamento …",
   "mn15:3.35": "È offensivo e sprezzante …",
-  "mn15:3.38": "È geloso e avaro …"
+  "mn15:3.38": "È geloso e avaro …",
+  "mn15:3.41": "È disonesto ed ingannevole …"
 }
