--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -24,5 +24,6 @@
   "mn15:3.32": "Quando viene accusato, non è in grado di riconoscere il proprio comportamento …",
   "mn15:3.35": "È offensivo e sprezzante …",
   "mn15:3.38": "È geloso e avaro …",
-  "mn15:3.41": "È disonesto e ingannevole …"
+  "mn15:3.41": "È disonesto e ingannevole …",
+  "mn15:3.44": "È ostinato e vano …"
 }
