--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -25,5 +25,6 @@
   "mn15:3.35": "È offensivo e sprezzante …",
   "mn15:3.38": "È geloso e avaro …",
   "mn15:3.41": "È disonesto e ingannevole …",
-  "mn15:3.44": "È ostinato e vano …"
+  "mn15:3.44": "È ostinato e vano …",
+  "mn15:3.47": "Inoltre, è attaccato alle proprie opinioni, tenendole strette, e rifiutandosi di lasciarle andare."
 }
