--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -26,5 +26,6 @@
   "mn15:3.38": "È geloso e avaro …",
   "mn15:3.41": "È disonesto e ingannevole …",
   "mn15:3.44": "È ostinato e vano …",
-  "mn15:3.47": "Inoltre, è attaccato alle proprie opinioni, tenendole strette, e rifiutandosi di lasciarle andare."
+  "mn15:3.47": "Inoltre, è attaccato alle proprie opinioni, tenendole strette, e rifiutandosi di lasciarle andare.",
+  "mn15:3.49": "Anche questa è una qualità che lo rende difficile da ammonire."
 }
