--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -28,5 +28,6 @@
   "mn15:3.44": "È ostinato e vano …",
   "mn15:3.47": "Inoltre, è attaccato alle proprie opinioni, tenendole strette, e rifiutandosi di lasciarle andare.",
   "mn15:3.49": "Anche questa è una qualità che lo rende difficile da ammonire.",
-  "mn15:3.50": "Queste sono le qualità che lo rendono difficile da ammonire."
+  "mn15:3.50": "Queste sono le qualità che lo rendono difficile da ammonire.",
+  "mn15:4.1": "“Immaginate che un mendicante non inviti"
 }
