--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -31,5 +31,6 @@
   "mn15:3.50": "Queste sono le qualità che lo rendono difficile da ammonire.",
   "mn15:4.1": "“Immaginate che un mendicante non inviti",
   "mn15:4.2": "altri mendicanti ad ammonirlo. Ma che lui sia facile da ammonire, avendo qualità che lo rendono facile da ammonire. È paziente, e riceve istruzioni in maniera rispettosa. I suoi compagni spirituali penserebbero valga la pena di consigliargli ed istruirlo, e quella persona otterrebbe la loro fiducia.",
-  "mn15:5.1": "E quali sono le qualità che lo rendono facile da ammonire?"
+  "mn15:5.1": "E quali sono le qualità che lo rendono facile da ammonire?",
+  "mn15:5.2": "Primo, un mendicante non ha desideri malvagi …"
 }
