--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -34,5 +34,6 @@
   "mn15:5.1": "E quali sono le qualità che lo rendono facile da ammonire?",
   "mn15:5.2": "Primo, un mendicante non ha desideri malvagi …",
   "mn15:5.47": "Inoltre, non è attaccato alle proprie opinioni, non tenendole strette, e lasciandole andare facilmente.",
-  "mn15:5.50": "Queste sono le qualità che lo rendono facile da ammonire."
+  "mn15:5.50": "Queste sono le qualità che lo rendono facile da ammonire.",
+  "mn15:6.1": "In questo caso, un mendicante dovrebbe comparare sé stesso ad un mendicante così."
 }
