--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -35,5 +35,6 @@
   "mn15:5.2": "Primo, un mendicante non ha desideri malvagi …",
   "mn15:5.47": "Inoltre, non è attaccato alle proprie opinioni, non tenendole strette, e lasciandole andare facilmente.",
   "mn15:5.50": "Queste sono le qualità che lo rendono facile da ammonire.",
-  "mn15:6.1": "In questo caso, un mendicante dovrebbe comparare sé stesso ad un mendicante così."
+  "mn15:6.1": "In questo caso, un mendicante dovrebbe comparare sé stesso ad un mendicante così.",
+  "mn15:6.2": "‘Questa persona ha desideri malvagi, essendo caduto sotto il dominio di desideri malvagi. E a me non piace e non approvo ciò che fa questa persona."
 }
