--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -44,5 +44,6 @@
   "mn15:6.49": "Un mendicante che sa questo dovrebbe dare origine al pensiero: ‘Non sarò attaccato alle mie opinioni, tenendole strette, ma le lascerò andare facilmente.’",
   "mn15:7.1": "In questo caso, un mendicante dovrebbe verificare sé stesso così:",
   "mn15:7.2": "‘Ho desideri malvagi? Sono caduto sotto il dominio di desideri malvagi?’",
-  "mn15:7.3": "Immaginate che, verificando, un mendicante sappia che "
+  "mn15:7.3": "Immaginate che, verificando, un mendicante sappia che ",
+  "mn15:7.4": "è caduto sotto il dominio di pensieri malvagi. Allora deve fare lo sforzo di abbandonare quelle qualità cattive e malsane."
 }
