--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -45,5 +45,6 @@
   "mn15:7.1": "In questo caso, un mendicante dovrebbe verificare sé stesso così:",
   "mn15:7.2": "‘Ho desideri malvagi? Sono caduto sotto il dominio di desideri malvagi?’",
   "mn15:7.3": "Immaginate che, verificando, un mendicante sappia che ",
-  "mn15:7.4": "è caduto sotto il dominio di pensieri malvagi. Allora deve fare lo sforzo di abbandonare quelle qualità cattive e malsane."
+  "mn15:7.4": "è caduto sotto il dominio di pensieri malvagi. Allora deve fare lo sforzo di abbandonare quelle qualità cattive e malsane.",
+  "mn15:7.5": "Ma immaginate che, verificando, un mendicante sa che"
 }
