--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -47,5 +47,6 @@
   "mn15:7.3": "Immaginate che, verificando, un mendicante sappia che ",
   "mn15:7.4": "è caduto sotto il dominio di pensieri malvagi. Allora deve fare lo sforzo di abbandonare quelle qualità cattive e malsane.",
   "mn15:7.5": "Ma immaginate che, verificando, un mendicante sa che",
-  "mn15:7.6": "non è caduto sotto il dominio di pensieri malvagi. Allora dovrebbe meditare con estasi e gioia, addestrandosi giorno e notti alle qualità sane."
+  "mn15:7.6": "non è caduto sotto il dominio di pensieri malvagi. Allora dovrebbe meditare con estasi e gioia, addestrandosi giorno e notti alle qualità sane.",
+  "mn15:7.89": "Immaginate che, verificando, un mendicante sappia che "
 }
