--- a/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn15_translation-it-giovannizappa.json
@@ -58,5 +58,6 @@
   "mn15:8.4": "Ma se non vedesse nessuno sporco o difetto, sarebbe felice, pensando:",
   "mn15:8.5": "‘Come sono fortunato ad essere pulito!’",
   "mn15:8.6": "Allo stesso modo, immaginate che, verificando, un mendicante veda che non ha abbandonato tutte queste qualità cattive e malsane. Allora deve fare lo sforzo di abbandonarle tutte.",
-  "mn15:8.7": "Ma immaginate che, verificando, un mendicante veda che ha abbandonato tutte queste qualità cattive e malsane. Allora deve meditare con estasi e gioia, addestrandosi giorno e notte alle qualità sane.”"
+  "mn15:8.7": "Ma immaginate che, verificando, un mendicante veda che ha abbandonato tutte queste qualità cattive e malsane. Allora deve meditare con estasi e gioia, addestrandosi giorno e notte alle qualità sane.”",
+  "mn15:8.8": "Questo è ciò che il Venerabile Mahāmoggallāna disse."
 }
