Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -1,4 +1,5 @@
 {
   "mn16:0.1": "Discorsi Medi 16",
-  "mn16:0.2": "Aridità Emotiva"
+  "mn16:0.2": "Aridità Emotiva",
+  "mn16:1.1": "Così ho sentito."
 }
