--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -4,5 +4,6 @@
   "mn16:1.1": "Così ho sentito.",
   "mn16:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
   "mn16:1.3": "Lì il Buddha si rivolse ai mendicanti,",
-  "mn16:1.4": "“Mendicanti!”"
+  "mn16:1.4": "“Mendicanti!”",
+  "mn16:1.5": "“Venerabile Signore,” risposero i mendicanti."
 }
