--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -6,5 +6,6 @@
   "mn16:1.3": "Lì il Buddha si rivolse ai mendicanti,",
   "mn16:1.4": "“Mendicanti!”",
   "mn16:1.5": "“Venerabile Signore,” risposero i mendicanti.",
-  "mn16:1.6": "Il Buddha disse:"
+  "mn16:1.6": "Il Buddha disse:",
+  "mn16:2.1": "“Mendicanti, quando un mendicante non ha abbandonato cinque tipi di aridità emotiva e tagliato cinque tenaglie emotive, non è possibile che raggiunga crescita, miglioramento, o maturità in questo insegnamento ed addestramento."
 }
