--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -7,5 +7,6 @@
   "mn16:1.4": "“Mendicanti!”",
   "mn16:1.5": "“Venerabile Signore,” risposero i mendicanti.",
   "mn16:1.6": "Il Buddha disse:",
-  "mn16:2.1": "“Mendicanti, quando un mendicante non ha abbandonato cinque tipi di aridità emotiva e tagliato cinque tenaglie emotive, non è possibile che raggiunga crescita, miglioramento, o maturità in questo insegnamento ed addestramento."
+  "mn16:2.1": "“Mendicanti, quando un mendicante non ha abbandonato cinque tipi di aridità emotiva e tagliato cinque tenaglie emotive, non è possibile che raggiunga crescita, miglioramento, o maturità in questo insegnamento ed addestramento.",
+  "mn16:3.1": "Quali sono i cinque tipi di aridità emotiva che non ha abbandonato?"
 }
