--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -12,5 +12,6 @@
   "mn16:3.2": "Primo, un mendicante ha dei dubbi riguardo il Maestro. È incerto, indeciso, e senza fiducia.",
   "mn16:3.3": "Essendo così, la sua mente non è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
   "mn16:3.4": "Questo è il primo tipo di aridità emotiva che non ha abbandonato.",
-  "mn16:4.1": "Inoltre, un mendicante ha dubbi riguardo l'insegnamento …"
+  "mn16:4.1": "Inoltre, un mendicante ha dubbi riguardo l'insegnamento …",
+  "mn16:4.2": "Questo è il secondo tipo di aridità emotiva."
 }
