--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -13,5 +13,6 @@
   "mn16:3.3": "Essendo così, la sua mente non è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
   "mn16:3.4": "Questo è il primo tipo di aridità emotiva che non ha abbandonato.",
   "mn16:4.1": "Inoltre, un mendicante ha dubbi riguardo l'insegnamento …",
-  "mn16:4.2": "Questo è il secondo tipo di aridità emotiva."
+  "mn16:4.2": "Questo è il secondo tipo di aridità emotiva.",
+  "mn16:5.1": "Ha dubbi riguardo la comunità …"
 }
