--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -14,5 +14,6 @@
   "mn16:3.4": "Questo è il primo tipo di aridità emotiva che non ha abbandonato.",
   "mn16:4.1": "Inoltre, un mendicante ha dubbi riguardo l'insegnamento …",
   "mn16:4.2": "Questo è il secondo tipo di aridità emotiva.",
-  "mn16:5.1": "Ha dubbi riguardo la comunità …"
+  "mn16:5.1": "Ha dubbi riguardo la comunità …",
+  "mn16:5.2": "Questo è il terzo tipo di aridità emotiva che non ha abbandonato."
 }
