Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -18,5 +18,6 @@
   "mn16:5.2": "Questo è il terzo tipo di aridità emotiva che non ha abbandonato.",
   "mn16:6.1": "Ha dubbi riguardo l'addestramento …",
   "mn16:6.3": "Questo è il quarto tipo di aridità emotiva che non ha abbandonato.",
-  "mn16:7.1": "Inoltre, un mendicante è arrabbiato ed agitato nei confronti dei propri compagni spirituali, risentito e chiuso."
+  "mn16:7.1": "Inoltre, un mendicante è arrabbiato ed agitato nei confronti dei propri compagni spirituali, risentito e chiuso.",
+  "mn16:7.2": "Essendo così, la sua mente non è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro."
 }
