--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -19,5 +19,6 @@
   "mn16:6.1": "Ha dubbi riguardo l'addestramento …",
   "mn16:6.3": "Questo è il quarto tipo di aridità emotiva che non ha abbandonato.",
   "mn16:7.1": "Inoltre, un mendicante è arrabbiato ed agitato nei confronti dei propri compagni spirituali, risentito e chiuso.",
-  "mn16:7.2": "Essendo così, la sua mente non è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro."
+  "mn16:7.2": "Essendo così, la sua mente non è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
+  "mn16:7.3": "Questo è il quinto tipo di aridità emotiva che non ha abbandonato."
 }
