--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -23,5 +23,6 @@
   "mn16:7.3": "Questo è il quinto tipo di aridità emotiva che non ha abbandonato.",
   "mn16:7.4": "Questi sono i cinque tipi di aridità emotiva che non ha abbandonato.",
   "mn16:8.1": "Quali sono le cinque tenaglie emotive che non ha tagliato?",
-  "mn16:8.2": "Primo, un mendicante non è libero da avidità, desiderio, apprezzamento, sete, passione, e voglia per i piaceri dei sensi."
+  "mn16:8.2": "Primo, un mendicante non è libero da avidità, desiderio, apprezzamento, sete, passione, e voglia per i piaceri dei sensi.",
+  "mn16:8.3": "Essendo così, la sua mente non è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro."
 }
