Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -45,5 +45,6 @@
   "mn16:16.1": "Inoltre, un mendicante non ha dubbi riguardo l'insegnamento …",
   "mn16:17.1": "Non ha dubbi riguardo la comunità …",
   "mn16:18.1": "Non ha dubbi riguardo l'addestramento …",
-  "mn16:19.1": "Non è arrabbiato o agitato nei confronti dei propri compagni spirituali, non risentito o chiuso."
+  "mn16:19.1": "Non è arrabbiato o agitato nei confronti dei propri compagni spirituali, non risentito o chiuso.",
+  "mn16:19.2": "Essendo così, la sua mente non è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro."
 }
