Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -48,5 +48,6 @@
   "mn16:19.1": "Non è arrabbiato o agitato nei confronti dei propri compagni spirituali, non risentito o chiuso.",
   "mn16:19.2": "Essendo così, la sua mente non è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
   "mn16:19.3": "Questo è il quinto tipo di aridità emotiva che ha abbandonato.",
-  "mn16:19.4": "Questi sono i cinque tipi di aridità emotiva che ha abbandonato."
+  "mn16:19.4": "Questi sono i cinque tipi di aridità emotiva che ha abbandonato.",
+  "mn16:20.1": "Quali sono le cinque tenaglie emotive che ha tagliato?"
 }
