Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -51,5 +51,6 @@
   "mn16:19.4": "Questi sono i cinque tipi di aridità emotiva che ha abbandonato.",
   "mn16:20.1": "Quali sono le cinque tenaglie emotive che ha tagliato?",
   "mn16:20.2": "Primo, un mendicante è libero da avidità, desiderio, apprezzamento, sete, passione, e voglia per i piaceri dei sensi.",
-  "mn16:20.3": "Essendo così, la sua mente è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro."
+  "mn16:20.3": "Essendo così, la sua mente è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
+  "mn16:20.4": "Questa è la prima tenaglia emotiva che ha tagliato."
 }
