Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -52,5 +52,6 @@
   "mn16:20.1": "Quali sono le cinque tenaglie emotive che ha tagliato?",
   "mn16:20.2": "Primo, un mendicante è libero da avidità, desiderio, apprezzamento, sete, passione, e voglia per i piaceri dei sensi.",
   "mn16:20.3": "Essendo così, la sua mente è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
-  "mn16:20.4": "Questa è la prima tenaglia emotiva che ha tagliato."
+  "mn16:20.4": "Questa è la prima tenaglia emotiva che ha tagliato.",
+  "mn16:21.1": "Inoltre, un mendicante è libero da avidità per il corpo …"
 }
