Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -62,5 +62,6 @@
   "mn16:25.1": "Una volta che un mendicante ha abbandonato questi cinque tipi di aridità emotiva e tagliato queste cinque tenaglie emotive, è possibile che raggiunga crescita, miglioramento, e maturità in questo insegnamento ed addestramento.",
   "mn16:26.1": "Sviluppa la base dei poteri psichici che ha il raccoglimento mentale causato dall'entusiasmo, e sforzo attivo …",
   "mn16:26.2": "la base dei poteri psichici che ha il raccoglimento mentale causato dall'energia, e sforzo attivo …",
-  "mn16:26.3": "la base dei poteri psichici che ha il raccoglimento mentale causato dallo sviluppo, e sforzo attivo …"
+  "mn16:26.3": "la base dei poteri psichici che ha il raccoglimento mentale causato dallo sviluppo, e sforzo attivo …",
+  "mn16:26.4": "la base dei poteri psichici che ha il raccoglimento mentale causato dall'indagine, e sforzo attivo. Ed il quinto è il vigore assoluto."
 }
