Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -42,5 +42,6 @@
   "sn-blurbs:sn1.40": "Uma deusa chamada Kokanada, provavelmente irmã da anterior, resume o ensinamento em um verso.",
   "sn-blurbs:sn1.41": "Uma divindade recita alguns versos para o Buda.",
   "sn-blurbs:sn1.42": "Diferentes dons têm diferentes propósitos.",
-  "sn-blurbs:sn1.43": "Deuses e humanos amam comer, que tipo de ser não gosta de comida?"
+  "sn-blurbs:sn1.43": "Deuses e humanos amam comer, que tipo de ser não gosta de comida?",
+  "sn-blurbs:sn1.44": "Um verso em forma de uma charada de Dhamma."
 }
