Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -44,5 +44,6 @@
   "sn-blurbs:sn1.42": "Diferentes dons têm diferentes propósitos.",
   "sn-blurbs:sn1.43": "Deuses e humanos amam comer, que tipo de ser não gosta de comida?",
   "sn-blurbs:sn1.44": "Um verso em forma de uma charada de Dhamma.",
-  "sn-blurbs:sn1.45": "Um verso em louvor ao Buda."
+  "sn-blurbs:sn1.45": "Um verso em louvor ao Buda.",
+  "sn-blurbs:sn1.46": "Para escapar da floresta da ilusão, é preciso o veículo do Dhamma."
 }
