Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -50,5 +50,6 @@
   "sn-blurbs:sn1.48": "Versos louvando o mosteiro de Jetavana, o Dhamma, e o venerável Sāriputta, aparentemente pronunciados por uma divindade para Anāthapiṇḍika.",
   "sn-blurbs:sn1.49": "O Buda é perguntado sobre o futuro dos avarentos e dos generosos.",
   "sn-blurbs:sn1.50": "Ghaṭīkāra, um discípulo do Buda Kassapa, visita o Buda, conta de sua vida passada e das conquistas de seus seis amigos.",
-  "sn-blurbs:sn1.51": "A moralidade é boa até mesmo na velhice."
+  "sn-blurbs:sn1.51": "A moralidade é boa até mesmo na velhice.",
+  "sn-blurbs:sn1.52": "A moralidade é boa quando não envelhece."
 }
