Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -52,5 +52,6 @@
   "sn-blurbs:sn1.50": "Ghaṭīkāra, um discípulo do Buda Kassapa, visita o Buda, conta de sua vida passada e das conquistas de seus seis amigos.",
   "sn-blurbs:sn1.51": "A moralidade é boa até mesmo na velhice.",
   "sn-blurbs:sn1.52": "A moralidade é boa quando não envelhece.",
-  "sn-blurbs:sn1.53": "Coisas que são amigas nesta e na próxima vida."
+  "sn-blurbs:sn1.53": "Coisas que são amigas nesta e na próxima vida.",
+  "sn-blurbs:sn1.54": "O que sustenta vários seres? Estranhamente, este verso não tem uma “contraparte” no Dhamma."
 }
