Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -57,5 +57,6 @@
   "sn-blurbs:sn1.55": "Uma pessoa é criada por meio do apego e teme o sofrimento.",
   "sn-blurbs:sn1.56": "Uma pessoa é criada pelo apego e não se liberta do sofrimento.",
   "sn-blurbs:sn1.57": "Uma pessoa é criada pelo apego e seu destino é traçado por seus atos.",
-  "sn-blurbs:sn1.58": "Qual é o caminho errado?"
+  "sn-blurbs:sn1.58": "Qual é o caminho errado?",
+  "sn-blurbs:sn1.59": "A verdadeira companhia de uma pessoa é sua fé."
 }
