Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -60,5 +60,6 @@
   "sn-blurbs:sn1.58": "Qual é o caminho errado?",
   "sn-blurbs:sn1.59": "A verdadeira companhia de uma pessoa é sua fé.",
   "sn-blurbs:sn1.60": "Um par de versos sobre a natureza da poesia sem uma “contraparte” no Dhamma.",
-  "sn-blurbs:sn1.61": "O “nome” torna tudo mais pesado."
+  "sn-blurbs:sn1.61": "O “nome” torna tudo mais pesado.",
+  "sn-blurbs:sn1.62": "A mente guia e controla o mundo."
 }
