Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -63,5 +63,6 @@
   "sn-blurbs:sn1.61": "O “nome” torna tudo mais pesado.",
   "sn-blurbs:sn1.62": "A mente guia e controla o mundo.",
   "sn-blurbs:sn1.63": "A mente guia o mundo e o apego a controla.",
-  "sn-blurbs:sn1.64": "O mundo é limitado pelo apego."
+  "sn-blurbs:sn1.64": "O mundo é limitado pelo apego.",
+  "sn-blurbs:sn1.65": "O mundo está aprisionado pelo apego."
 }
