--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -64,5 +64,6 @@
   "sn-blurbs:sn1.62": "A mente guia e controla o mundo.",
   "sn-blurbs:sn1.63": "A mente guia o mundo e o apego a controla.",
   "sn-blurbs:sn1.64": "O mundo é limitado pelo apego.",
-  "sn-blurbs:sn1.65": "O mundo está aprisionado pelo apego."
+  "sn-blurbs:sn1.65": "O mundo está aprisionado pelo apego.",
+  "sn-blurbs:sn1.66": "A morte e a velhice afligem o mundo, que arde no desejo."
 }
