Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -67,5 +67,6 @@
   "sn-blurbs:sn1.65": "O mundo está aprisionado pelo apego.",
   "sn-blurbs:sn1.66": "A morte e a velhice afligem o mundo, que arde no desejo.",
   "sn-blurbs:sn1.67": "O mundo está preso ao apego e tem seus alicerces no sofrimento.",
-  "sn-blurbs:sn1.68": "O mundo está confinado pela morte."
+  "sn-blurbs:sn1.68": "O mundo está confinado pela morte.",
+  "sn-blurbs:sn1.69": "O mundo está preso ao desejo."
 }
