Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -79,5 +79,6 @@
   "sn-blurbs:sn1.77": "Várias questões sobre assuntos diversos.",
   "sn-blurbs:sn1.78": "O que não deve ser doado?",
   "sn-blurbs:sn1.79": "Várias questões sobre assuntos diversos.",
-  "sn-blurbs:sn1.80": "Várias questões sobre assuntos diversos."
+  "sn-blurbs:sn1.80": "Várias questões sobre assuntos diversos.",
+  "sn-blurbs:sn1.81": "Várias questões sobre diversos tipos de pessoas."
 }
