Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -85,5 +85,6 @@
   "sn-blurbs:sn2.1": "Uma deidade chamada Kassapa visita o Buda e fala do treinamento de um discípulo mendicante na reclusão e sobre a fala correta.",
   "sn-blurbs:sn2.2": "A deidade Kassapa fala de como um discípulo mendicante deve ser um praticante da meditação, pacífico e livre.",
   "sn-blurbs:sn2.3": "O deus Māgha pergunta ao Buda sobre o que se deve abandonar para dormir bem e de consciência limpa.",
-  "sn-blurbs:sn2.4": "A deidade Māgadha pergunta ao Buda quantas são as fontes de luz existentes no mundo. O Buda fala de cinco luzes, sendo ele a melhor."
+  "sn-blurbs:sn2.4": "A deidade Māgadha pergunta ao Buda quantas são as fontes de luz existentes no mundo. O Buda fala de cinco luzes, sendo ele a melhor.",
+  "sn-blurbs:sn2.5": "O deus Dāmali sugere que um verdadeiro brâmane deve lutar para abandonar o desejo. O Buda discorda, dizendo que um verdadeiro santo já havia concluído o seu trabalho."
 }
